--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,13 @@
 @import "bootstrap/dist/css/bootstrap.css";
+
+html,
+body {
+  height: 100%;
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: stretch;
+}
