--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,9 @@ body {
   height: 100%;
   align-items: stretch;
 }
+
+.cr-elevated {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+  border: solid 1px #aaa;
+  border-radius: 5px;
+}
