--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
   align-items: stretch;
 }
 
-.cr-elevated {
+.crt-elevated {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
   border: solid 1px #aaa;
   border-radius: 5px;
